Fixed the main stylesheet href link to work for everyone, hid the scrollbar for common browsers

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+* {
+    /*hide scrollbar for IE, Edge, Firefox*/
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+::-webkit-scrollbar {
+    /*hide scrollbar for Chrome, Safari, Opera*/
+    display: none;
+}
+
 main
 {
     display: grid; 
